# perspective-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ecosystem.config.cjs  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
docs/: ARCHITECTURE.md  ENGINEER_BLOG_POST.md  MEETING_PACK_FORMAT.md  MODELS.md  RELEASE_STRATEGY_ADVISORY.md  X_THREAD_DRAFT.md  YOUTUBE_SCRIPT.md
engine/: agent_processes.py  agent_tools.py  http_client.py  node.py  orchestrator.py  pack_loader.py  pathsafe.py  runtime.py  shared_memory.py  validate_pack.py
examples/: quickstart.sh
examples/sample_output/: README.md  final_review.md  meeting_notes.md  pipeline_meta.json
frontend/: README.md
packs/release-strategy/: agent_prompts.json  meeting_template.json  message_schemas.json  profiles.json
packs/should-we-open-source/: agent_prompts.json  meeting_template.json  message_schemas.json  profiles.json
packs/technical-spike/: agent_prompts.json  meeting_template.json  message_schemas.json  profiles.json
patterns/customer_feedback/: analysts.json  profiles.json
patterns/debate/: profiles.json
server/: main.py
tests/: conftest.py  test_node.py  test_node_async.py  test_node_parsing.py  test_orchestrator.py  test_orchestrator_phases.py  test_pack_loader.py  test_pathsafe.py  test_patterns.py  test_runtime.py  test_runtime_ssl.py  test_server.py  test_shared_memory.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  DebateArena.vue  MeetingArena.vue  (+4 more)
(+18 files in other folders)
