[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perspective-engine"
version = "0.1.0"
description = "Multi-agent meeting simulation — AI agents with distinct personas debate decisions through structured phases, then an independent reviewer evaluates the outcome."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "coverage>=7.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/amo3167/perspective-engine"
Repository = "https://github.com/amo3167/perspective-engine"

[project.scripts]
perspective-engine = "engine.orchestrator:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.ruff.lint.per-file-ignores]
# These modules insert the project root onto sys.path before importing the
# engine.* modules, so their imports are intentionally not at the top of file.
"engine/node.py" = ["E402"]
"engine/orchestrator.py" = ["E402"]
"patterns/debate/scripts/debate_orchestrator.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["engine"]
omit = ["engine/validate_pack.py"]
